--- a/testmultiple.html
+++ b/testmultiple.html
@@ -16,9 +16,9 @@
 
         @keyframes example {
             0%   {left:200px; top:0px;}
-        /*25%  {left:0px; top:200px;}*/
-        /*50%  {left:200px; top:200px;}*/
-        /*75%  {left:200px; top:0px;}*/
+            /*25%  {left:0px; top:200px;}*/
+            /*50%  {left:200px; top:200px;}*/
+            /*75%  {left:200px; top:0px;}*/
             100% {left:0px; top:0px;}
         }
         .vl {
@@ -31,23 +31,25 @@
 
 </head>
 <body>
-<div class="vl"></div>
+
 <div class="m">
-    <div class="content-mission" style="max-width:1100px">
-        <div class="row-mission padding-mission64" id="mission">
+    <div class="content-mission" style="max-width:1100px;">
+        <div class="row-mission padding-mission64" id="mission" style="border:2px; border-style:double; border-color:darkgrey; padding: 1em;">
 
             <h1>Test Your CS</h1>
             <hr>
             <div id="quiz"></div>
+<!--            <div class="padding-left-team"id="quiz2"></div>-->
             <button id="submit">Submit Quiz</button>
             <div id="results"></div>
             <hr>
         </div>
     </div>
 </div>
+
 <script>
     (function() {
-        function buildQuiz() {
+        function buildQuiz1() {
             const output = [];
             myQuestions.forEach((currentQuestion, questionNumber) => {
                 const answers = [];
@@ -67,6 +69,26 @@
             });
             quizContainer.innerHTML = output.join("");
         }
+        // function buildQuiz2() {
+        //     const output2 = [];
+        //     myQuestions2.forEach((currentQuestion2, questionNumber2) => {
+        //         const answers2 = [];
+        //         for (letter in currentQuestion2.answers) {
+        //             answers2.push(
+        //                 `<label>
+        //     <input type="radio" name="question${questionNumber2}" value="${letter}">
+        //     ${letter} :
+        //     ${currentQuestion2.answers[letter]}
+        //   </label>`
+        //             );
+        //         }
+        //         output2.push(
+        //             `<div class="question"> ${currentQuestion2.question} </div>
+        // <div class="answers"> ${answers2.join("")} </div>`
+        //         );
+        //     });
+        //     quizContainer2.innerHTML = output2.join("");
+        // }
 
         function showResults() {
             const answerContainers = quizContainer.querySelectorAll(".answers");
@@ -84,6 +106,7 @@
                     answerContainers[questionNumber].style.color = "red";
                 }
             });
+
 
             // show number of correct answers out of total
             resultsContainer.innerHTML = `${numCorrect} out of ${myQuestions.length}`;
@@ -229,9 +252,149 @@
                 correctAnswer: 'b'
             },
         ];
+        // const myQuestions = [
+        //     {
+        //         question: " 1. What does HTML Stand For?",
+        //         answers: {
+        //             a: ' Hyperlinks and Text Markup Language ',
+        //             b: ' Hyper Text Markup Language ',
+        //             c: ' High Tech Multiple Languages '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        //     {
+        //         question: " 2. Choose the correct HTMl element for the largest heading?",
+        //         answers: {
+        //             a: ' head ',
+        //             b: ' h6 ',
+        //             c: ' h1 '
+        //         },
+        //         correctAnswer: 'c'
+        //     },
+        //     {
+        //         question: " 3. What does CSS stand for?",
+        //         answers: {
+        //             a: ' Cascading Style Sheets ',
+        //             b: ' Computer Style Sheets ',
+        //             c: ' Creative Style Sheets '
+        //         },
+        //         correctAnswer: 'a'
+        //     },
+        //     {
+        //         question: " 4. What is the correct HTML element for inserting a line break?",
+        //         answers: {
+        //             a: ' break ',
+        //             b: ' br ',
+        //             c: ' bk '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        //     {
+        //         question: " 5. Choose the correct HTML element to define important text.",
+        //         answers: {
+        //             a: ' strong ',
+        //             b: ' bold ',
+        //             c: ' important '
+        //         },
+        //         correctAnswer: 'a'
+        //     },
+        //     {
+        //         question: " 6. Choose the correct HTML element to define emphasized text",
+        //         answers: {
+        //             a: ' bold ',
+        //             b: ' em ',
+        //             c: ' strong '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        //     {
+        //         question: " 7. Which CSS property controls the text size?",
+        //         answers: {
+        //             a: ' text-size ',
+        //             b: ' font-num ',
+        //             c: ' font-size '
+        //         },
+        //         correctAnswer: 'c'
+        //     },
+        //     {
+        //         question: " 8. What is the correct CSS syntax for making all the p elements bold?",
+        //         answers: {
+        //             a: ' p style = text-size:bold; ',
+        //             b: ' p style = font-size:bold; ',
+        //             c: ' p=bold '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        // ];
+        // const myQuestions2 = [
+        //
+        //     {
+        //         question: " 9. Which character is used to indicate an end tag?",
+        //         answers: {
+        //             a: ' / ',
+        //             b: ' *',
+        //             c: ' <'
+        //         },
+        //         correctAnswer: 'a'
+        //     },
+        //     {
+        //         question: " 10. Which of these elements are all table elements?",
+        //         answers: {
+        //             a: ' table, tr, td ',
+        //             b: ' table, head, foot',
+        //             c: ' table, tr, tb'
+        //         },
+        //         correctAnswer: 'a'
+        //     },
+        //     {
+        //         question: " 11. How can you make a numbered list?",
+        //         answers: {
+        //             a: ' dl ',
+        //             b: ' ul ',
+        //             c: ' ol '
+        //         },
+        //         correctAnswer: 'c'
+        //     },
+        //     {
+        //         question: " 12. How can you make a bulleted list?",
+        //         answers: {
+        //             a: ' dl  ',
+        //             b: ' ul ',
+        //             c: ' ol '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        //     {
+        //         question: " 13. What is the default value of the position property?",
+        //         answers: {
+        //             a: ' static ',
+        //             b: ' absolute ',
+        //             c: ' fixed '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        //     {
+        //         question: " 14. An iframe is used to display a web page within a web page.",
+        //         answers: {
+        //             a: ' true ',
+        //             b: ' false ',
+        //             c: ' What is a iframe? '
+        //         },
+        //         correctAnswer: 'a'
+        //     },
+        //     {
+        //         question: " 15. In HTML, which attribute is used to specify that an input field must be filled out? ",
+        //         answers: {
+        //             a: ' necessary ',
+        //             b: ' required ',
+        //             c: ' validate '
+        //         },
+        //         correctAnswer: 'b'
+        //     },
+        // ];
 
         // display quiz right away
-        buildQuiz();
+        buildQuiz1();
 
         // on submit, show results
         submitButton.addEventListener("click", showResults);
