--- a/testmultiple.html
+++ b/testmultiple.html
@@ -40,7 +40,7 @@
         <br>
         <div class="row-mission padding-mission64" id="mission" style="border:2px; border-style:double; border-color:darkgrey; padding: 1em;">
 
-            <h1>Test Your CS</h1>
+            <h1>Test Your CS Principles</h1>
             <hr>
             <div id="quiz"></div>
 <!--            <div class="padding-left-team"id="quiz2"></div>-->
