changed caledar page

--- a/Calendar.html
+++ b/Calendar.html
@@ -34,9 +34,9 @@
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
         <img src="CALENDAR.png" style="width:100%;" id="calendar"/>
-        <div class="calendar" align="center">
-            <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
-        </div>
+        <div data-tockify-component="calendar" data-tockify-calendar="watt.coding"></div>
+        <script data-cfasync="false" data-tockify-script="embed"
+                src="https://public.tockify.com/browser/embed.js"></script>
     </div>
 </div>
 </div>
