tried to make website more responsive

--- a/Calendar.html
+++ b/Calendar.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -33,7 +34,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="CALENDAR.png" style="width:100%;" id="calendar"/>
+        <img src="Header%20Images/CALENDAR.png" style="width:100%;" id="calendar"/>
         <div data-tockify-component="calendar" data-tockify-calendar="watt.coding"></div>
         <script data-cfasync="false" data-tockify-script="embed"
                 src="https://public.tockify.com/browser/embed.js"></script>
