--- a/Our-Team.html
+++ b/Our-Team.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -32,11 +33,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <h1 align="center" id="team">About Us</h1>
-        <p class="text-grey">
-            WATT is a non-profit organization founded in 2015 by two Holy Names graduates as a way to introduce girls to computer science at a young age.
-            We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
-            team of juniors and seniors.</p>
+        <img src="Header%20Images/Team.png" id="links" style="width:100%;"/>
         <div class="padding-left-team col-mission">
             <h1 class="center">Founders</h1><br>
             <div class="founders-image">
