--- a/WATTPage.html
+++ b/WATTPage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
 
     <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
+        <img src="Header%20Images/banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
     </div>
 
     <div class="mySlides fade">
@@ -59,7 +60,7 @@
 
 
 
-    <img src="LOCATIONS.png" style="width:100%;" id="schools"/>
+    <img src="Header%20Images/LOCATIONS.png" style="width:100%;" id="schools"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
