--- a/FAQ.html
+++ b/FAQ.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -57,7 +58,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="FAQ.png" style="width:100%;"/>
+        <img src="Header%20Images/FAQ.png" style="width:100%;"/>
         <div class="FAQ" div id="FAQ">
             <button class="accordion">How did WATT start?</button>
             <div class="panel">
