--- a/Links.html
+++ b/Links.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -32,7 +33,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="LINKS.png" id="links" style="width:100%;"/>
+        <img src="Header%20Images/LINKS.png" id="links" style="width:100%;"/>
 
         <div class="row-resource schools">
             <div class="column-resource">
