--- a/Photos.html
+++ b/Photos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -32,7 +33,7 @@
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
 
-        <img src="PHOTO.png" style="width:100%;" id="photos"/>
+        <img src="Header%20Images/PHOTO.png" style="width:100%;" id="photos"/>
         <div style="text-align: center;">
             <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
         </div>
