--- a/Scratch.html
+++ b/Scratch.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
@@ -37,7 +38,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Practice.png" style="width:100%;"/>
+        <img src="Header%20Images/Practice.png" style="width:100%;"/>
 
     </div>
     <iframe src="https://scratch.mit.edu/projects/320208670/embed" class="center" allowtransparency="true" width="485" height="402"  frameborder="0" scrolling="no" allowfullscreen></iframe>
