got photos to appear on code pen

--- a/CodePen.html
+++ b/CodePen.html
@@ -50,15 +50,14 @@
         <h3>2. Create Your Website Through HTML</h3>
         <p>HTML stands for HyperText Markup Language. HTML displays all of your text, pictures, videos and more!</p>
         <p>1. Start by creating the title of your page by using the "h1" tags. An "h1" tag is normally used for the title or any emphasized text that you want on the page. "h1" is the largest header tag you can have and the smallest header tag is "h6". NOTE: All tags need to be closed by a "/' mark.</p>
-        <p>2. Optional: To center text use the "center" tag</p>
-        <img src="Scratch%20Code%20Pen/Step1codepen.png" style="width:100%;" />
+        <p>2. Optional: To center text use the "center" tag</p><img src="CodePen Images/h1tagcodepen.png" style="width:100%"/>
         <h3>3. Add Your Content</h3>
         <p> The "hr" tag helps break content apart from others through creating a line of separation from the rest of the content.</p>
         <p>1. For the first section of your website use a "h3" tag for your title.</p>
         <p>2. For your more lengthy paragraphs use the "p" tag to display text onto your screen.</p>
         <p>3. Note: to center text you can create a class called "center" which will center all your text for you in CSS. To create a class in css use a "." and then name the class. Place all of the class content in "{}" brackets.</p>
         <p> Extra: You can also change the text color of your titles and paragraphs. In CSS, put the name of the tag you're using and then inside the brackets put color: "purple". To change the font you're using include in the brackets font-family: "'Times New Roman', serif". This allows for you to create a font family which allows you to prioritize a list of fonts you would like to use. For example if Times New Roman cannot be accessed the text would be changed to serif. </p>
-        <img src="../CodePen%20Images/codepen%20step%203.png" style="width:100%;"/>
+        <img src="CodePen Images/codepen step 3.png" style="width:100%;"/><img
         <h3>4. Adding Images</h3>
         <p>In HTML images are defined using a "img" tag. Use img src= " " to specify a URL in which you want to access a photo from. The "alt" tag is used a a description of your picture. This is helpful if your website doesnt load the picture, the user will still be able to know what the image was supposed to be.</p>
         <p>Note: You cannot just copy the image url. Right click and copy the image address and then paste that for the image src.</p>
