--- a/WATT.html
+++ b/WATT.html
@@ -53,7 +53,7 @@ body { padding-top: 232px; }
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width: 100%;">
+            <img src="Bannerimage.png" alt="Girls Who are Coding" style="object-position: 50% 50%; width: 100%; height: 348px; object-fit: cover;">
         </div>
 
         <div class="mySlides fade">
