fixed overlap when make screen smaller

--- a/Calendar.html
+++ b/Calendar.html
@@ -36,7 +36,7 @@ body { padding-top: 232px; }
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Header%20Images/CALENDAR.png" style="width:100%;" id="calendar"/>
+        <img src="Header%20Images/CALENDAR.png" style="width:100%; padding-top: 50px;" id="calendar"/>
         <div data-tockify-component="calendar" data-tockify-calendar="watt.coding"></div>
         <script data-cfasync="false" data-tockify-script="embed"
                 src="https://public.tockify.com/browser/embed.js"></script>
