--- a/CodePen.html
+++ b/CodePen.html
@@ -32,7 +32,7 @@
 <div class="m">
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
-            <img src="Header%20Images/Practice.png" style="width:100%;"/>
+            <img src="Header%20Images/Practice.png" style="width:100%; padding-top: 50px;"/>
             <p class="codepen" data-height="600" data-theme-id="0" data-default-tab="html,result" data-user="wattcoding" data-slug-hash="WqyKLX" style="height: 1000px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="WATT WEBSITE">
   <span>See the Pen <a href="https://codepen.io/wattcoding/pen/WqyKLX/">
   WATT WEBSITE</a> by WATT (<a href="https://codepen.io/wattcoding">@wattcoding</a>)
