--- a/FAQ.html
+++ b/FAQ.html
@@ -58,7 +58,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Header%20Images/FAQ.png" style="width:100%;"/>
+        <img src="Header%20Images/FAQ.png" style="width:100%; padding-top: 50px;"/>
         <div class="FAQ" div id="FAQ">
             <button class="accordion">How did WATT start?</button>
             <div class="panel">
