--- a/Links.html
+++ b/Links.html
@@ -33,7 +33,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Header%20Images/LINKS.png" id="links" style="width:100%;"/>
+        <img src="Header%20Images/LINKS.png" id="links" style="width:100%; padding-top: 50px;"/>
 
         <div class="row-resource schools">
             <div class="column-resource">
