--- a/Our-Team.html
+++ b/Our-Team.html
@@ -33,7 +33,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Header%20Images/Team.png" id="links" style="width:100%;"/>
+        <img src="Header%20Images/Team.png" id="links" style="width:100%; padding-top: 50px;"/>
         <div class="padding-left-team col-mission">
             <h1 class="center">Founders</h1><br>
             <div class="founders-image">
