--- a/Scratch.html
+++ b/Scratch.html
@@ -38,7 +38,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Header%20Images/Practice.png" style="width:100%;"/>
+        <img src="Header%20Images/Practice.png" style="width:100%; padding-top: 50px;"/>
 
     </div>
     <iframe src="https://scratch.mit.edu/projects/320208670/embed" class="center" allowtransparency="true" width="485" height="402"  frameborder="0" scrolling="no" allowfullscreen></iframe>
