--- a/Photos.html
+++ b/Photos.html
@@ -35,7 +35,7 @@
 
         <img src="Header%20Images/PHOTO.png" style="width:100%; padding-top: 50px;" id="photos"/>
         <div style="text-align: center;">
-            <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+            <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" style="width:100%" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
         </div>
     </div>
 </div>
