--- a/HomePage.html
+++ b/HomePage.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="dropdown">
-                <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/pULOuD" data-mode="popup" >Volunteer </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/pULOuD" data-mode="popup" >Volunteer </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typeform_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
             </div>
         </div>
     </div>
