--- a/HomePage.html
+++ b/HomePage.html
@@ -79,6 +79,7 @@
     </div>
 </div>
 <iframe scrolling="yes" src="WATT.html" frameborder="0" name="test" id="WATT" width=100% height=900 class="center-iframe"></iframe>
+<footer>
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a class="typeform-share bar-button button" href="FAQ.html" data-mode="popup">Questions?</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
@@ -91,7 +92,7 @@
         </div>
     </div>
 </div>
-
+</footer>
 
 </body>
 </html>
